# class-chess-123

./: .gitignore  .gitmodules  Application.cpp  Application.h  CMakeLists.txt  README.md  imgui.ini  main_macos.cpp  main_win32.cpp  pawn.rc
classes/: Bit.cpp  Bit.h  BitHolder.cpp  BitHolder.h  Chess.cpp  Chess.h  ChessAI.cpp  ChessAI.h  ChessBit.h  ChessSquare.cpp  ChessSquare.h  Entity.h  Game.cpp  Game.h  GameState.cpp  GameState.h  GenMoves.cpp  GenMoves.h  Move.cpp  Move.h  Player.h  Sprite.cpp  Sprite.h  Square.cpp  Square.h  Turn.h  magicbitboards.h
imgui/: imgui.h
